[gd_scene load_steps=3 format=3 uid="uid://jnuswb6wlr2"]

[ext_resource type="PackedScene" uid="uid://dy0t5e08lbfsi" path="res://game_scene/scoreboard/scoreboard_display_control.tscn" id="2_1xvqh"]
[ext_resource type="Script" path="res://game_scene/scoreboard/DisplayTestControl.gd" id="2_akvfe"]

[node name="DisplayTest" type="Node2D"]

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(0, 50)
layout_mode = 3
anchors_preset = 0
offset_left = 393.0
offset_top = 100.0
offset_right = 825.0
offset_bottom = 523.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_akvfe")

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 31.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreboardDisplay" parent="Control/VBoxContainer" instance=ExtResource("2_1xvqh")]
unique_name_in_owner = true
layout_mode = 2

[node name="EditScore" type="TextEdit" parent="Control/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_stretch_ratio = 0.23
theme_override_font_sizes/font_size = 46
text = "0"
placeholder_text = "1234568"

[node name="ScrollEnable" type="CheckButton" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Scroll Enable"

[node name="ScrollSpeed" type="SpinBox" parent="Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
step = 0.1
value = 1.0

[node name="IncrementScore" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "+1000
"

[connection signal="text_changed" from="Control/VBoxContainer/EditScore" to="Control" method="_on_text_edit_text_changed"]
[connection signal="toggled" from="Control/VBoxContainer/ScrollEnable" to="Control" method="_on_scroll_enable_toggled"]
[connection signal="value_changed" from="Control/VBoxContainer/ScrollSpeed" to="Control" method="_on_scroll_speed_value_changed"]
[connection signal="pressed" from="Control/VBoxContainer/IncrementScore" to="Control" method="_on_increment_score_pressed"]
